[package]
name = "npmv"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
semver = "1.0"
flate2 = "1.0"
tar = "0.4"
similar = { version = "2.6", features = ["inline"] }

